# netscope

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/capture/: pcap_reader.cpp  pcap_reader.hpp
